# Enterprise-Empresarial

./: .coverage  .env.example  .gitignore  CONTRIBUTING.md  GUIA_RAPIDO.md  LICENSE  PUSH_TO_GITHUB.md  README.md  README_NEXUS.md  docker-compose.yml  push-to-github.ps1  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci-cd.yml
config/: config.yaml  credenciais.json
config/ai-agents/: notion-executive-glm-20250903_132402.json  notion-gemini-premium-1756916755703.json  notion-payload-agente-comercial.json  notion-payload-agents-showcase.json  notion-ultra-professional-1756916632001.json
docs/: ANTIGRAVITY_EXECUTION_GUIDE.md  API_REFERENCE.md  TROUBLESHOOTING.md
docs/business/: APP_PLATFORM_PROMPT.md  APRESENTACAO_EXECUTIVA_SETUP_PHD.md  RELATORIO_EXECUTIVO_FINAL_2025-08-20.md  RELATORIO_PHD_EDITION_FINAL.md  guia_ambiente_isolado_glm45v.md  guia_integracao_GLM45V_HuggingFace.md  relatorio_exec_setup_jorgeos_warp.md  relatorio_exec_setup_jorgeos_warp_REV.md
docs/knowledge-base/: 1‑Pager Executivo — Ecossistema Enterprise e2d2c66df5cc4351b13072b80e27899e.md  APRESENTACAO_TECNICA_NEXUS 9a7ecc2fa9d34b9bac1be95724391796.md  Arquitetura Técnica do Ecossistema Enterprise — Do 2a66c150e9ff8027b3c2de81d5dca66f.md  README-updated.md  README_BACKUP.md  Revisão detalhada.txt.txt  SETUP_ANALYSIS_COMPLETE_V2.md  docker-compose-nexus.md  estrutura_vendas_completa.txt  gitignore.txt  guia-segmentos-especializacao.md  notion_page_template.md  requirements.txt  (+1 more)
infrastructure/: docker-compose.yml
scripts/: setup.ps1
(+59 files in other folders)
