[tool.poetry]
name = "nexus-enterprise"
version = "2.0.0"
description = "Enterprise-grade AI agents orchestration with Temporal"
authors = ["Nexus Team"]
readme = "README.md"
packages = [
    { include = "nexus_core", from = "packages/nexus_core" },
    { include = "nexus_llm_factory", from = "packages/nexus_llm_factory" },
]

[tool.poetry.dependencies]
python = "^3.10"
# Core
pydantic = "^2.5"
pydantic-settings = "^2.1"

# Temporal
temporalio = "^1.5"

# LLM & AI
httpx = "^0.26"
tenacity = "^8.2"

# Vector DB
qdrant-client = "^1.7"

# Utils
python-dotenv = "^1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4"
pytest-asyncio = "^0.23"
pytest-cov = "^4.1"
ruff = "^0.1"
mypy = "^1.8"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = [
    "--cov=packages",
    "--cov=apps",
    "--cov-report=html",
    "--cov-report=term-missing",
    "--verbose",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
